apps/invidious/invidious/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invidious
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: invidious
          image: "quay.io/invidious/invidious:latest-arm64"
          livenessProbe:
            tcpSocket:
              port: 3000
          readinessProbe:
            httpGet:
              path: /api/v1/comments/jNQXAC9IVRw
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 2
            periodSeconds: 30
          ports:
            - containerPort: 3000
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
      securityContext:
        runAsNonRoot: true
        runAsUser: 1637
        runAsGroup: 1637
        seccompProfile:
          type: RuntimeDefault
