apps/invidious/invidious/service.yaml
apiVersion: v1
kind: Service
metadata:
  # don't name it `insidious`, as this will set the `INSIDIOUS_PORT` env var in
  # the pods, which collides with Insidious' configuration
  name: web
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3000
