apps/invidious/invidious/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invidious
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - yt.mhu.dev
      secretName: invidious-tls
  rules:
    - host: yt.mhu.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
